--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout('/layouts/boilerplate') -%>
 <body>
     <h3>All Listing</h3>
-    <form method="GET" action="/listing/new">
+    <!-- <form method="GET" action="/listing/new">
         <button>Create New Listing</button>
-    </form>
+    </form>  -->
     <ul>
    <%for(let listing of allListing){%>
        <li><a href="/listing/<%=listing._id%>"><%=listing.title%></a></li>
     <%} %>
 </ul>
 </body>
-</html>
+
 
 
