--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wanderLust</title>
-</head>
+<% layout('/layouts/boilerplate') -%>
 <body>
     <h3>Create a new Listing</h3>
     <form method="POST" action="/listing">
@@ -29,4 +23,3 @@
         <button>ADD</button>
     </form>
 </body>
-</html>
