listing page or card style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,3 +38,32 @@
     margin-right: 1rem;
     font-size: 1.2rem;
 }
+
+/* Cards */
+.card{
+    border: none;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card-body{
+    padding: 0 !important;
+}
+.listing-link{
+    text-decoration: none;
+}
+
+/* card effect */
+.card-img-overlay{
+    opacity: 0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
+}
