--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,15 +1,29 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
-    <h3>All Listing</h3>
-    <!-- <form method="GET" action="/listing/new">
-        <button>Create New Listing</button>
-    </form>  -->
-    <ul>
-   <%for(let listing of allListing){%>
-       <li><a href="/listing/<%=listing._id%>"><%=listing.title%></a></li>
+  <h3 >All Listing</h3>
+
+<div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 "  >
+    <%for(let listing of allListing){%>
+      <a href="/listing/<%= listing._id%>" class="listing-link">
+        <div class="card" >
+              <img class="card-img-top" 
+                src=<%=listing.image%> alt="listing image"  
+                style="height: 20rem"
+              />
+              <div class="card-img-overlay">
+                
+              </div>
+
+              <div class="card-body">
+              <p class="card-text">
+              <%= listing.title%> <br>
+              &#x20B9;<%= listing.price.toLocaleString('en-IN') %> / night
+              </p>
+              </div>
+          </div>
+      </a>
     <%} %>
-</ul>
+  </div>
 </body>
-
-
-
+  <ul>
+ 
