new page or add listing page style

--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -1,25 +1,68 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
-    <h3>Create a new Listing</h3>
-    <form method="POST" action="/listing">
-        <input name="listing[title]" placeholder="enter title" type="text">
-        <br>
-        <br>
-        <textarea name="listing[description]" placeholder="enter description" type="text" cols="30" rows="10"></textarea>
-        <br>
-        <br>
-        <input name="listing[image]" placeholder="enter image url" type="text">
-        <br>
-        <br>
-        <input name="listing[price]" placeholder="enter your price" type="number">
-        <br>
-        <br>
-        <input name="listing[country]" placeholder="enter your country"  type="text">
-        <br>
-        <br>
-        <input name="listing[location]" placeholder="enter your location" type="text">
-        <br>
-        <br>
-        <button>ADD</button>
-    </form>
+  <div class="row">
+    <div class="col-8 offset-2">
+        <form method="POST" action="/listing"  >
+        <h3 class="mt-5">Create a new Listing</h3>
+        <div >
+            <label for="title" class="form-label">Title</label>
+            <input
+            name="listing[title]"
+            placeholder="enter title"
+            type="text"
+            class="form-control"
+            />
+        </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea
+            name="listing[description]"
+            type="text"
+            cols="30"
+            rows="10"
+            class="form-control"
+            ></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="image" class="form-label">Image</label>
+            <input
+            name="listing[image]"
+            type="text"
+            class="form-control"
+            placeholder="enter image url"
+            />
+        </div>
+        <div class="row">
+            <div class="mb-3 col-md-4">
+                <label for="price" class="form-label">Price</label>
+                <input
+                name="listing[price]"
+                placeholder="enter your price"
+                type="number"
+                class="form-control"
+                />
+            </div>
+            <div class="mb-3 col-md-8">
+                <label for="country" class="form-label">Country</label>
+                <input
+                name="listing[country]"
+                placeholder="enter your country"
+                type="text"
+                class="form-control"
+                />
+            </div>
+        </div>
+        <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input
+            name="listing[location]"
+            placeholder="enter your location"
+            type="text"
+            class="form-control"
+            />
+        </div>
+        <button class="btn btn-dark mt-5 mb-5">ADD</button>
+        </form>
+    </div>
+  </div>
 </body>
