--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container{
+    flex: 1;
+}
 .navbar{
  height: 5rem;   
 }
