--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -4,7 +4,7 @@
     <div class="col-8 offset-2">
         <form method="POST" action="/listing"  >
         <h3 class="mt-5">Create a new Listing</h3>
-        <div >
+        <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input
             name="listing[title]"
