form Validation using Bootstrap

--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -14,7 +14,7 @@
               <div class="card-body">
                   <p class="card-text"> 
                     <span><%= listing.title%></span><br>
-                    <span><%= listing && listing.price ? listing.price.toLocaleString('en-IN') : 'N/A' %></span>
+                    <span> &#x20B9;<%= listing && listing.price ? listing.price.toLocaleString('en-IN') : 'N/A' %></span>
                 </p> 
               </div>
           </div>
