completed client side validation

--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -13,6 +13,8 @@
             class="form-control"
             required
             />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please Enter Your Title</div>
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
@@ -24,6 +26,8 @@
             class="form-control"
           required
             ></textarea>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please Enter Your Description</div>
         </div>
         <div class="mb-3">
             <label for="image" class="form-label">Image</label>
@@ -54,6 +58,8 @@
                 class="form-control"
                 required
                 />
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please Enter Your Country</div>
             </div>
         </div>
         <div class="mb-3">
@@ -65,9 +71,12 @@
             class="form-control"
             required
             />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please Enter Your Location</div>
         </div>
         <button class="btn btn-dark mt-5 mb-5">ADD</button>
         </form>
     </div>
   </div>
+
 </body>
