--- a/views/listing/edit.ejs
+++ b/views/listing/edit.ejs
@@ -1,38 +1,85 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
-    <div class="row">
-       
-        <form method="POST" action="/listing/<%=listing._id%>?_method=PUT" class="col-md-8 offset-2">
-            <h3 class="mt-5">Edit your listing</h3>
-            <div class="mb-3">
-                <label for="title" class="form-label">Title</label>
-                <input name="listing[title]" value="<%=listing.title%>" type="text" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea name="listing[description]"  type="text" cols="30" rows="10" class="form-control"><%=listing.description%></textarea>
+  <div class="row">
+    <form method="POST" action="/listing/<%=listing._id%>?_method=PUT" class="col-md-8 offset-2 needs-validation" novalidate >
+      <h3 class="mt-5">Edit your listing</h3>
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          name="listing[title]"
+          value="<%=listing.title%>"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please Enter Your Title</div>
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
+          name="listing[description]"
+          type="text"
+          cols="30"
+          rows="10"
+          class="form-control"
+          required
+        >
+<%=listing.description%></textarea
+        >
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please Enter Your Description</div>
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label">Image</label>
+        <input
+          name="listing[image]"
+          value="<%=listing.image%>"
+          type="text"
+          class="form-control"
+          required
+        />
+      </div>
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label for="price" class="form-label">Price</label>
+          <input
+            name="listing[price]"
+            value="<%=listing.price%>"
+            type="number"
+            class="form-control"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please Enter Your Price</div>
+        </div>
+        <div class="mb-3 col-md-8">
+          <label for="country" class="form-label">Country</label>
+          <input
+            name="listing[country]"
+            value="<%=listing.country%>"
+            type="text"
+            class="form-control"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please Enter Your Country</div>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input
+          name="listing[location]"
+          value="<%=listing.location%>"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please Enter Your Location</div>
+      </div>
 
-            </div>
-            <div class="mb-3">
-                <label for="image" class="form-label">Image</label>
-                <input name="listing[image]" value="<%=listing.image%>" type="text"  class="form-control">
-            </div>
-            <div class="row">
-                <div class="mb-3 col-md-4">
-                    <label for="price" class="form-label">Price</label>
-                    <input name="listing[price]" value="<%=listing.price%>" type="number"  class="form-control">
-                </div> 
-                <div class="mb-3 col-md-8">
-                    <label for="country" class="form-label">Country</label>
-                    <input name="listing[country]" value="<%=listing.country%>"  type="text"  class="form-control">
-                </div> 
-            </div>
-            <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input name="listing[location]" value="<%=listing.location%>" type="text" class="form-control">
-            </div> 
-        
-            <button class="btn btn-dark mt-5 mb-5">EDIT</button>
-        </form>
-    </div>
+      <button class="btn btn-dark mt-5 mb-5">EDIT</button>
+    </form>
+  </div>
 </body>
