--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -27,15 +27,15 @@
     <form method="post" action="/listing/<%=listing._id%>?_method=DELETE">
       <button class="btn btn-dark offset-2">Delete</button>
     </form>
-  </div>
+  </div> 
 
   <div class="col-8 offset-3">
     <hr>
     <h4>Leave a Review</h4>
-    <form action="" class="mb-5">
+    <form action="/listing/<%=listing._id%>/review" method="POST" class="mb-5">
       <div class="mb-3 mt-3" >
         <label for="rating form-label">Rating</label>
-        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range ">
       </div>
       <div  class="mb-3 mt-3">
         <label for="comment form-label">Comments</label>
