--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,49 +1,85 @@
 <% layout('/layouts/boilerplate') -%>
 
-  <div class="row">
-    <div class="col-8 offset-4 mt-5">
-      <b><%= listing.title %></b> <br />
+<div class="row">
+  <div class="col-8 offset-4 mt-5"><b><%= listing.title %></b> <br /></div>
+  <div class="card col-4 offset-4">
+    <img
+      src="<%= listing.image %>"
+      class="card-img-top show-img"
+      alt="listing image"
+    />
+    <div class="card-body">
+      <p class="card-text">
+        <span><%= listing.description %></span><br />
+        <span>
+          &#x20B9;<%= listing.price ? listing.price.toLocaleString('en-IN') :
+          "N/A" %></span
+        ><br />
+        <span><%= listing.location %></span><br />
+        <span><%= listing.country %></span><br />
+      </p>
     </div>
-    <div class="card col-4 offset-4">
-      <img
-        src="<%= listing.image %>"
-        class="card-img-top show-img"
-        alt="listing image"
+  </div>
+</div>
+<div class="edit-btn mb-5">
+  <a href="/listing/<%=listing._id%>/edit" class="btn btn-dark col-1 offset-4"
+    >Edit</a
+  >
+  <form method="post" action="/listing/<%=listing._id%>?_method=DELETE">
+    <button class="btn btn-dark offset-2">Delete</button>
+  </form>
+</div>
+
+<div class="col-8 offset-3">
+  <hr />
+  <h4>Leave a Review</h4>
+  <form
+    action="/listing/<%=listing._id%>/review"
+    method="POST"
+    novalidate
+    class="needs-validation mb-5"
+  >
+    <div class="mb-3 mt-3">
+      <label for="rating form-label">Rating</label>
+      <input
+        type="range"
+        min="1"
+        max="5"
+        id="rating"
+        name="review[rating]"
+        class="form-range"
       />
+    </div>
+    <div class="mb-3 mt-3">
+      <label for="comment form-label">Comments</label>
+      <textarea
+        name="review[comment]"
+        id="comment"
+        cols="30"
+        rows="5"
+        class="form-control"
+        required
+      ></textarea>
+      <!-- <div class="valid-feedback">Looks good!</div> -->
+      <div class="invalid-feedback">Please add some comments for review</div>
+    </div>
+    <button class="btn btn-outline-dark">Submit</button>
+  </form>
+</div>
+
+<hr />
+
+<div>
+  <p><b>All Review</b>s</p>
+  <div class="row">
+    <%for(review of listing.reviews){%>
+    <div class="card col-6 mb-3 " style="border: 2px solid rgb(243, 238, 238) !important">
       <div class="card-body">
-        <p class="card-text">
-        
-          <span><%= listing.description %></span><br />
-          <span> &#x20B9;<%= listing.price ? listing.price.toLocaleString('en-IN') : "N/A" %></span
-          ><br />
-          <span><%= listing.location %></span><br />
-          <span><%= listing.country %></span><br />
-        </p>
+        <h5 class="card-title">Rup medhi</h5>
+        <p class="card-text"><%=review.comment%></p>
+        <p class="card-text"><%=review.rating%> star</p>
       </div>
     </div>
+    <% }%>
   </div>
-  <div class="edit-btn mb-5">
-    <a href="/listing/<%=listing._id%>/edit" class="btn btn-dark col-1 offset-4">Edit</a>
-    <form method="post" action="/listing/<%=listing._id%>?_method=DELETE">
-      <button class="btn btn-dark offset-2">Delete</button>
-    </form>
-  </div> 
-
-  <div class="col-8 offset-3">
-    <hr>
-    <h4>Leave a Review</h4>
-    <form action="/listing/<%=listing._id%>/review" method="POST"  novalidate class=" needs-validation mb-5">
-      <div class="mb-3 mt-3" >
-        <label for="rating form-label">Rating</label>
-        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range ">
-      </div>
-      <div  class="mb-3 mt-3" >
-        <label for="comment form-label">Comments</label>
-        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-        <!-- <div class="valid-feedback">Looks good!</div> -->
-        <div class="invalid-feedback">Please add some comments for review</div>
-      </div>
-      <button class="btn btn-outline-dark">Submit</button>
-    </form>
-  </div>
-
+</div>
