--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -79,7 +79,7 @@
         <p class="card-text"><%=review.comment%></p>
         <p class="card-text"><%=review.rating%> star</p>
       </div>
-      <form action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" class="mb-3 mt-2" method="POST">
+      <form action="/listing/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" class="mb-3 mt-2" method="POST">
         <button class="btn btn-dark btn-sm">Delete</button>
       </form>
     </div>
